tests/error/messages/tested.default
run: cmp %.out %.expected
cleanup: rm -f %.out

exit: = 0
stderr: =
